# Nidhogg-AI

./: README.md  pyproject.toml
src/nidhogg_ai/: __init__.py  agent.py  cli.py  config.py  environment.py  input_control.py  memory.py  model.py  screen.py  trainer.py
