[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nidhogg-ai"
version = "0.1.0"
description = "Deep reinforcement learning framework for controlling Nidhogg 1"
authors = [{name = "Nidhogg AI Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch",
    "numpy",
    "opencv-python",
    "mss",
    "pydirectinput",
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[project.scripts]
nidhogg-train = "nidhogg_ai.cli:main"
